fixing contrast error

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -100,9 +100,11 @@ main { margin: 1rem; }
   max-width: 55%;
 }
 .hero-title { margin: 0 0 .5rem; }
-.hero-features { list-style: none;
+.hero-features { 
+  list-style: none;
   margin: 0 0 1rem; 
   padding: 0;
+  font-weight: 600;
 }
 .btn {
   display: inline-block;
